# 1INF27

EX1/Cola/Cola_2_prioridades/: CMakeLists.txt  main.cpp
EX1/Cola/Cola_Erasmo/: CMakeLists.txt  main.cpp
EX1/Cola/EX1_2025_1_2A_Cola2Prioridades/: CMakeLists.txt  main.cpp
EX1/FuerzaBruta/EjercicioMultimochila/: CMakeLists.txt  main.cpp
EX1/FuerzaBruta/EjercicioUnaMochila/: CMakeLists.txt  main.cpp
EX1/FuerzaBruta/LAB1_2024_1_Dependencia/: CMakeLists.txt  main.cpp
EX1/Lista/EX1_2025_1_P2A/: CMakeLists.txt  main.cpp
EX1/Recursion/EX1_2025_1_P1B/: CMakeLists.txt  (+1 more)
EX2/ABB/Lab5_2023_2_SKYNERD/: CMakeLists.txt  funcionesSkynerd.cpp  funcionesSkynerd.hpp  main.cpp
EX2/ABB/Lab5_2023_2_SKYNERD/BibliotecaArbolBinarioBusqueda/: ElementoArbolBinarioBusqueda.h  funcionesArbolBinarioBusqueda.cpp
EX2/ABB/Lab5_2023_2_SKYNERD/BibliotecaCola/: funcionesCola.cpp  funcionesCola.h
EX2/ABB/Lab5_2023_2_SKYNERD/BibliotecaPila/: ElementoPila.h
Laboratorio_2/BibliotecaLista/: funcionesLista.cpp
Laboratorio_2/Listas/Biblioteca_Again/: CMakeLists.txt  main.cpp
Laboratorio_2/Listas/Biblioteca_Again/BibliotecaLista/: ElementoLista.hpp  Lista.h  NodoLista.hpp  funcionesListas.cpp  funcionesListas.h
Laboratorio_2/Listas/Lab_2025_1_P1/: CMakeLists.txt  main.cpp
Laboratorio_2/Listas/Lab_2025_1_P1/BibliotecaLista/: ElementoLista.h  Lista.h  NodoLista.h  funcionesLista.cpp  funcionesLista.h
Laboratorio_2/Pilas/Clase/Nautilus/: CMakeLists.txt  main.cpp
Laboratorio_2/Pilas/Clase/Nautilus/Biblioteca_Pilas/: ElementoPila.hpp  NodoPila.hpp  Pila.hpp  funcionesPilas.cpp  funcionesPilas.hpp
Laboratorio_2/Pilas/my_bibliotecaPilas/: CMakeLists.txt  main.cpp
Laboratorio_2/Pilas/my_bibliotecaPilas/My_BibiotecaPilas/: ElementoPila.hpp  NodoPila.hpp  Pila.hpp  funcionesPila.cpp  funcionesPila.hpp
Laboratorio_4/ArbolBinario/: main.cpp
Laboratorio_4/Clase_Divide_Venceras/: CMakeLists.txt  main.cpp
Laboratorio_4/Clase_Merge/: CMakeLists.txt  main.cpp
Laboratorio_4/Clase_Sube_Y_Baja/: CMakeLists.txt  main.cpp
Laboratorio_4/Lab3_2022_MINSA/: CMakeLists.txt  main.cpp
Laboratorio_4/Lab_2024_1_OppenHaimer/: CMakeLists.txt  main.cpp
Laboratorio_4/Merge_Cueva/: MergeSort.cpp
Laboratorio_4/P1_Lab2023_2/: CMakeLists.txt  main.cpp
Laboratorio_4/P2_Lab2024_2_DV/: CMakeLists.txt  main.cpp
Laboratorio_4/P2_Lab2025_1_DV/: CMakeLists.txt  main.cpp
Laboratorio_4/Suma_max_Divide_Venceras/: CMakeLists.txt  main.cpp
Laboratorio_5/ABB_Skynerd/: CMakeLists.txt  main.cpp
Laboratorio_5/CumulosMinimos/: CMakeLists.txt  main.cpp
Laboratorio_5/CumulosMinimos/BibliotecaArbolBinarioBusqueda/: NodoArbolBinarioBusqueda.h  funcionesArbolBinarioBusqueda.cpp
Laboratorio_5/CumulosMinimos/BibliotecaCola/: funcionesCola.h
Laboratorio_5/EliminarNodos/: CMakeLists.txt  main.cpp
Laboratorio_5/Lab4_2023_2_P1_ArbolToken/: CMakeLists.txt
Laboratorio_5/ProbandoABB/: CMakeLists.txt  Utils.hpp  main.cpp
Laboratorio_5/ProbandoABB/Bib_ABB/: ABB.hpp  ElementoABB.hpp  NodoABB.hpp  funcionesABB.cpp  funcionesABB.hpp
Laboratorio_5/ProbandoABB/BibliotecaCola/: ElementoCola.h
Laboratorio_5/Recorridos_Iterativos/: CMakeLists.txt  main.cpp
Laboratorio_5/Recorridos_Iterativos/BibliotecaCola/: funcionesCola.h
Laboratorio_5/Recorridos_Iterativos/BibliotecaPila/: ElementoPila.h
(+138 files in other folders)
